--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <body>
 
     <div id="contenedor">
-        <h1>Encuesta TFG: ¿La pobreza fortalece? Creencias sobre resiliencia y su impacto en la redistribución</h1> <!--Encabezado-->>
-        <p>Muchas gracias por su colaboración</p> <!--Texto de debajo-->>
+        <h1>Encuesta TFG: ¿La pobreza fortalece? Creencias sobre resiliencia y su impacto en la redistribución</h1> <!--Encabezado-->
+        <p>Muchas gracias por su colaboración</p> <!--Texto de debajo-->
         <div id="cuestionario">
-            <a id="linkEncuesta" href="#" target="_blank">Enlace a la encuesta</a> <!--Texto del enlace-->>
+            <a id="linkEncuesta" href="#" target="_blank">Enlace a la encuesta</a> <!--Texto del enlace-->
         </div>
     </div>
 
