--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 
     <div id="contenedor">
-        <h1>Encuesta TFG: ¿La pobreza fortalece? Creencias sobre resiliencia y su impacto en la redistribución</h1> <!--Encabezado-->
+        <h1>Encuesta TFG: Actitudes hacia diversos grupos sociales</h1> <!--Encabezado-->
         <p>Muchas gracias por su colaboración</p> <!--Texto de debajo-->
         <div id="cuestionario">
             <a id="linkEncuesta" href="#" target="_blank">Enlace a la encuesta</a> <!--Texto del enlace-->
@@ -63,8 +63,8 @@
 
     <script>
         const cuestionarios = [ 
-            "https://docs.google.com/forms/d/e/1FAIpQLScGrptulc_SvAlQX3yFRyGSjwF8KXtzWxzy_pZXLrHhqKJYug/viewform?usp=header",
-            "https://docs.google.com/forms/d/e/1FAIpQLSdsDZLnM47jgV2q-s-U2gKrLq0lKUA3XszSI6cPB5eNnGkHCQ/viewform?usp=dialog"
+            "https://forms.gle/14zwePe7YBst9UXg7",
+            "https://forms.gle/5Dcjbu4cn3c3De4MA"
         ];/* Los cuestionarios. Si se cambia alguno, se cambia aqui. Si se quiere cambiar el ratio, se duplica el que se quiera */
 
         const urlAleatoria = cuestionarios[Math.floor(Math.random() * cuestionarios.length)]; /* Eleccion aleatoria */
